# Changelog

// Template:
////
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁🐛🧽🗑️
|
| https://github.com/knative/client/pull/[#]

|===
////


## v0.13.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Show envFrom when running describe service or revision
| https://github.com/knative/client/pull/630[#630]

| 🎁
| Add E2E test for `kn source binding` commands
| https://github.com/knative/client/pull/634[#634]

| 🎁
| Add `--cmd` and `--arg` for customization of container entrypoint
| https://github.com/knative/client/pull/635[#635]

| 🧽
| Add `no-wait` instead of `--async` and deprecate it
https://github.com/knative/client/pull/639[#639]

## v0.12.0 (2020-01-29)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `kn source binding` CRUD support for managing sink bindings
| https://github.com/knative/client/pull/625[#625]

| 🎁
| Update to Knative eventing v0.12.0
| https://github.com/knative/client/pull/621[#621]

| 🧽️
| Update to Knative serving v0.12.0
| https://github.com/knative/client/pull/618[#618]

| 🎁
| Add `--pull-secret` for specifying pull secrets
| https://github.com/knative/client/pull/617[#617]

| 🧽
| Improve error handling when no command is given
| https://github.com/knative/client/pull/615[#615]

| 🎁
| Add `--autoscale-window` for service commands
| https://github.com/knative/client/pull/614[#614]

| 🧽
| Add checks for namespace creation instead of waiting
| https://github.com/knative/client/pull/611[#611]

| 🐛
| Fix mandatory `kn trigger` filter
| https://github.com/knative/client/pull/603[#603]

| 🎁
| Add E2E tests for CronJob source
| https://github.com/knative/client/pull/599[#599]

| 🐛
| Fix handling of map-like options
| https://github.com/knative/client/pull/592[#592]

| 🎁
| Add E2E tests for plugins
| https://github.com/knative/client/pull/591[#591]

| 🐛
| Fix misleading error message when verb is bad