@@ -29,7 +29,7 @@ kn service [flags]
 * [kn](kn.md)	 - Knative client
 * [kn service create](kn_service_create.md)	 - Create a service.
 * [kn service delete](kn_service_delete.md)	 - Delete a service.
-* [kn service describe](kn_service_describe.md)	 - Show details for a given service
+* [kn service describe](kn_service_describe.md)	 - Show details of a service
 * [kn service list](kn_service_list.md)	 - List available services.
 * [kn service update](kn_service_update.md)	 - Update a service.
 
