@@ -104,7 +104,7 @@ func TestCompletion(t *testing.T) {
 		assert.Assert(t, action.Matches("get", "routes"))
 
 		assert.Check(t, util.ContainsAll(output,
-			"Name", "URL", "Owner References", "Traffic Targets", "Conditions",
+			"Name", "URL", "Traffic Targets", "Conditions",
 			"foo", "default", "90%", "foo-v2", "#v2", "10%", "@latest", "foo-v3"))
 	})
 
